<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center"
    android:background="@color/bg"
    tools:context=".addArt">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginBottom="90dp"
        android:text="@string/ajouter_produit" />

    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/black"
        android:hint="@string/titre" />

    <EditText
        android:id="@+id/cat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/black"
        android:hint="@string/categorie" />


    <EditText
        android:id="@+id/qte"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/quantité"
        android:textColorHint="@color/black"/>

    <EditText
        android:id="@+id/des"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:hint="@string/description_du_produit"
        android:textColorHint="@color/black"/>

    <Button
        android:id="@+id/ajouter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ajouter_produit" />

</LinearLayout>